--- a/Projet_S5_copie/Projet_S5/graph.css
+++ b/Projet_S5_copie/Projet_S5/graph.css
@@ -5,6 +5,10 @@ body{
      justify-content: center;
      height: 100vh;/*IMPORTANT*/
 }
+/* Mode sombre */
+.dark-mode {
+  background: black ;
+}
 .index1{
     width: 160px;
     height: 160px;
